// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Link:LinkInternal matches the snapshot when format is desktopFooter 1`] = `
.c0 {
  color: #fff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500',sans-serif;
  font-weight: 500;
  margin-right: 120px;
  font-size: 18px;
  opacity: 0.6;
  height: 25px;
  margin-left: 140px;
  text-align: center;
}

<span
  className="c0"
  format="desktopFooter"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is mobileFooter 1`] = `
.c0 {
  color: #fff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500',sans-serif;
  font-weight: 500;
  font-size: 15px;
  opacity: 0.5;
  height: 18px;
  padding-top: 13px;
  text-align: center;
}

<span
  className="c0"
  format="mobileFooter"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is mobileHeader 1`] = `
.c0 {
  color: #fff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500',sans-serif;
  font-weight: 500;
  line-height: 1;
  font-size: 15px;
  border-radius: 5px 5px 0 0;
  display: inline-block;
  width: 100%;
  text-align: center;
  padding: 12px 0 11px 0;
}

<span
  className="c0"
  format="mobileHeader"
/>
`;

exports[`components:Link:LinkInternal matches the snapshot when format is tabletFooter 1`] = `
.c0 {
  color: #fff;
  cursor: pointer;
  font-family: 'Museo Sans Cyrl 500',sans-serif;
  font-weight: 500;
  font-size: 15px;
  opacity: 0.6;
  height: 22px;
  margin-left: 96px;
  text-align: center;
}

<span
  className="c0"
  format="tabletFooter"
/>
`;
